mapa de chile agregado

--- a/src/views/los_rios.html
+++ b/src/views/los_rios.html
@@ -9,11 +9,5 @@
     <link rel="stylesheet" href="src/assets/styles/estilos.css" />
 </head>
 <body>
-    <div class="container-grid">
-        <h1 class="titulo">¿Te gustaría visitar a los pinguinos?</h1>
-        <div class="boton-grid">
-            <button class="boton-pag-principal">Haz click aca</button>
-        </div>
-    </div>
+    <h1>Región de los Ríos</h1>
 </body>
-</html>
