--- a/src/assets/styles/estilos.css
+++ b/src/assets/styles/estilos.css
@@ -1,46 +1,67 @@
 
+@font-face {
+    font-family: 'Amatic SC';
+    font-style: normal;
+    font-weight: normal;
+    src: url(../fonts/AmaticSC-Bold.ttf);
+}
+
 body{
-font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+    font-family: 'Amatic SC';
+    margin: auto;
+    background-color: #5e81ac;
+    text-align: center;
 }
 
-.boton-grid{
-    margin: 10%;
-    background-color: green;
-    height: 100%;
-}
-
-.boton-pag-principal{
-    background-color: brown;
-    height: 100%;
-}
+/* Index.html */
 
 .container-grid{
     display: grid;
     margin: auto;
-    margin-top: 15%;
-    background-color: blue;
     text-align: center;
-    border-radius: 15px;
-    grid-row: 30% 1fr;
 }
 
 .titulo{
-    background-color: bisque;
+    font-size: 500%;
+    color: #e5e9f0;
+}
+.texto-index{
+    font-size: 200%;
+    color: #e5e9f0;
+}
+
+.boton-index{
+    height: 200px;
+    width: 400px;
+}
+
+
+/* Chile.html */
+
+.container-chile {
+    display: grid;
+    grid-template-columns: 30% 1fr;
+}
+
+.texto-chile{
+    text-align: right;
+    color: #e5e9f0;
+    font-size: 200%;
 }
 
 .div-mapa{
-    width: 40%;
+    width: 60%;
     margin: auto;
+    margin-top: 3%;
     align-content: center;
 }
 
 .div-mapa path {
-    fill: gray;
-    stroke: whitesmoke;
+    fill: #D8DEE9;
+    stroke: #88c0d0;
     stroke-width: 2px;
 }
 
 .div-mapa :hover {
-    fill: black;
+    fill: #4c566a;
 }
