--- a/src/views/los_rios.html
+++ b/src/views/los_rios.html
@@ -6,8 +6,9 @@
     <meta name="author" content="Antonella Caldo, Daniel Espinoza, Juan Pablo Loustalot, José Marsal, Catalina Melo, Ignacio Vial" />
     <meta name="language" content="español" />
     <title>Pinguinos de Chile</title>
-    <link rel="stylesheet" href="src/assets/styles/estilos.css" />
+    <link rel="stylesheet" href="../assets/styles/estilos.css"/>
 </head>
 <body>
-    <h1>Región de los Ríos</h1>
+    <h1 class="titulo">Región de los Ríos</h1>
+    <img src="../assets/img/Sin título-3.jpg">
 </body>
