--- a/src/views/intro.html
+++ b/src/views/intro.html
@@ -31,7 +31,7 @@
                         <li><a href="epoca/epoca1.html">Enero-Febrero-Marzo</a></li>
                         <li><a href="epoca/epoca2.html">Abril-Mayo-Junio</a></li>
                         <li><a href="epoca/epoca3.html">Julio-Agosto-Septiembre</a></li>
-                        <li><a href="epoca/epoca4.html">Octubre-Noviembre-Diciembre</a></li>
+                        <li><a href="epoca/epoca.html">Octubre-Noviembre-Diciembre</a></li>
 
                     </ul>
                 </li>
